Fix file storage Add cors for dev mode Fix static server Update frontend to prompt for marker Update front end to load from static server